@@ -1,3 +1,8 @@
+2007-02-20  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>
+
+	* Timers: failing timer actions don't prevent the global timer ticker
+	from functioning properly.
+
 2007-02-18  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>
 
 	* Plugin: Provide a plugin.header file with boilerplate plugin
